--- a/roles/sshkeygen/tasks/main.yml
+++ b/roles/sshkeygen/tasks/main.yml
@@ -2,4 +2,4 @@
   shell: ssh-keygen -t rsa -b 4096 -f ./roles/common/files/id_rsa
 
 - name: create ssh host key
-  shell: ssh-keygen -t rsa -b 4096 -N '' -f /etc/ssh/ssh_host_rsa_key
+  shell: ssh-keyscan 127.0.0.1 >> ~/.ssh/known_hosts
