--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -20,7 +20,7 @@
 - name: sshd configured
   notify:
     - restart sshd
-  lineinfile: dest=/etc/ssh/sshd_config state=present regexp="{{items.regexp}}" line="{{items.line}}" insertafter="{{items.regexp}}" owner=root group=root mode=0600
+  lineinfile: dest=/etc/ssh/sshd_config state=present regexp="{{item.regexp}}" line="{{item.line}}" insertafter="{{item.regexp}}" owner=root group=root mode=0600
   with_items: "{{sshd_configs}}"
   tags: sshd
   
