--- a/roles/firewalld/tasks/main.yml
+++ b/roles/firewalld/tasks/main.yml
@@ -9,7 +9,7 @@
   tags: firewalld
 
 - name: 破棄設定
-  shell: {{ item }}
+  shell: "{{ item }}"
   tags: firewalld
   with_items:
     # 通常のsshポートは塞ぐ
@@ -45,7 +45,7 @@
     - firewall-cmd --permanent --direct --add-rule ipv4 filter OUTPUT 0 -m state --state INVALID -j DROP
 
 - name: 条件付きで許可
-  shell: {{ item }}
+  shell: "{{ item }}"
   tags: firewalld
   with_items:
     # Ping Flood攻撃対策（4回以上pingを受信した場合、以降は1秒間に1度だけ許可します。）
@@ -61,19 +61,19 @@
     - firewall-cmd --permanent --direct --add-rule ipv4 filter FORWARD  0 -m recent --name portscan --remove
 
 - name: 許可
-  shell: {{ item }}
+  shell: "{{ item }}"
   tags: firewalld
   with_items:
     - firewall-cmd --add-port=49152/tcp --permanent  # 49152番の通信許可(このサーバのsshのポート番号）
 
 - name: ルールに当てはまらない受信を破棄(これで、INPUT、FORWARD両方にDROP)
-  shell: {{ item }}
+  shell: "{{ item }}"
   tags: firewalld
   with_items:
     - firewall-cmd --permanent --zone=public --set-target=DROP
 
 - name: 設定反映
-  shell: {{ item }}
+  shell: "{{ item }}"
   tags: firewalld
   with_items:
     - firewall-cmd --reload
